[project]
name = "python-marker"
version = "0.1.0"
description = ""
authors = [
    {name = "rayhankinan",email = "rayhankinan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "marker-pdf[full] (>=1.6.1,<2.0.0)",
    "streamlit (>=1.43.2,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
